<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.melberry.viewModel.CitiesViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:fillViewport="true"
            android:overScrollMode="always">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/available_cities_label"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textColor="@color/black"/>

                <RelativeLayout
                    android:id="@+id/melbourne_city"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="16dp">

                    <com.makeramen.roundedimageview.RoundedImageView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:elevation="16dp"
                        android:onClick="@{() -> viewModel.onMelbourneCityClick()}"
                        android:src="@drawable/melbourne"
                        app:riv_corner_radius="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="4dp"
                        android:elevation="16dp"
                        android:text="@string/melbourne_au_label"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/bratislava_city"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="16dp">

                    <com.makeramen.roundedimageview.RoundedImageView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:elevation="16dp"
                        android:onClick="@{() -> viewModel.onBratislavaCityClick()}"
                        android:src="@drawable/bratislava"
                        app:riv_corner_radius="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="4dp"
                        android:elevation="16dp"
                        android:text="@string/bratislava_sk_label"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="16dp">

                    <com.makeramen.roundedimageview.RoundedImageView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:elevation="16dp"
                        android:onClick="@{() -> viewModel.test()}"
                        android:src="@drawable/stratford"
                        app:riv_corner_radius="10dp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="4dp"
                        android:elevation="16dp"
                        android:text="@string/stratford_ca_label"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                    <com.makeramen.roundedimageview.RoundedImageView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:elevation="16dp"
                        android:src="@drawable/pamplona"
                        app:riv_corner_radius="10dp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="4dp"
                        android:elevation="16dp"
                        android:text="@string/pamplona_es_label"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/cta_contact_us"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:text="@string/contact_us_txt"
                        android:textAlignment="center"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/contact_us_label"
                        android:onClick="@{() -> viewModel.onContactUsClick()}"
                        android:textAlignment="center"
                        android:textColor="@color/pink"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </FrameLayout>

</layout>