<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.melberry.viewModel.DisabilityViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bottomSheetBackground"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".view.onboarding.FeaturesFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16000003">

            <ImageView
                android:id="@+id/disability_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="40dp"
                android:src="@{viewModel.image}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.13"
                tools:layout_conversion_absoluteHeight="200dp"
                tools:layout_conversion_absoluteWidth="0dp"
                android:contentDescription="@string/disability_icon_desc" />

            <TextView
                android:id="@+id/title_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/disability_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/description_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="27dp"
                tools:layout_conversion_absoluteWidth="391dp" />

            <TextView
                android:id="@+id/description_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/disability_description"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_txt"
                tools:layout_conversion_absoluteHeight="21dp"
                tools:layout_conversion_absoluteWidth="391dp"
                tools:layout_editor_absoluteY="279dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="3dp"
                    android:paddingStart="3dp"
                    android:text="@string/disability_preferences_status"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{viewModel.disabilityPreference}"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:checked="@{viewModel.isOn}"
            android:onClick="@{() -> viewModel.onSwitchClick()}"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:shadowColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:onClick="@{() -> viewModel.onSaveButtonClick()}"
            android:text="@string/save_preferences_button_label"
            android:textColor="@color/bottomSheetBackground"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="371dp" />


    </android.support.constraint.ConstraintLayout>


</layout>